--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -14,8 +14,8 @@ colorScheme = "congo"
 # robots = ""
 
 [homepage]
-  layout = "page" # valid options: page, profile, custom
-  showRecent = false
+  layout = "profile" # valid options: page, profile, custom
+  showRecent = true
 
 [article]
   showDate = true
