--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ steps:
     image: plugins/docker
     settings:
       registry: registry.okami101.io
-      repo: registry.okami101.io/adr1enbe4udou1n/blog
+      repo: adr1enbe4udou1n/blog
       tags: latest
       username:
         from_secret: registry_username
