--- a/.drone.yml
+++ b/.drone.yml
@@ -11,8 +11,7 @@ steps:
   - name: image
     image: plugins/docker
     settings:
-      registry: registry.okami101.io
-      repo: adr1enbe4udou1n/blog
+      repo: registry.okami101.io/adr1enbe4udou1n/blog
       tags: latest
       username:
         from_secret: registry_username
