--- a/data/works.yaml
+++ b/data/works.yaml
@@ -1,24 +1,36 @@
 realworld:
-  - title: ASP.NET Core Realworld
-    type: aspnet
+  - name: aspnet
+    title: ASP.NET Core Realworld
     repo: adr1enbe4udou1n/aspnetcore-realworld-example-app
 
-  - title: Spring Boot Realworld
-    type: springboot
+  - name: springboot
+    title: Spring Boot Realworld
     repo: adr1enbe4udou1n/spring-boot-realworld-example-app
 
-  - title: Laravel Realworld
-    type: laravel
+  - name: laravel
+    title: Laravel Realworld
     repo: adr1enbe4udou1n/laravel-realworld-example-app
 
-  - title: Symfony Realworld
-    type: symfony
+  - name: symfony
+    title: Symfony Realworld
     repo: adr1enbe4udou1n/symfony-realworld-example-app
 
-  - title: NestJS Realworld
-    type: nestjs
+  - name: nestjs
+    title: NestJS Realworld
     repo: adr1enbe4udou1n/nestjs-realworld-example-app
 
-  - title: FastAPI Realworld
-    type: fastapi
+  - name: fastapi
+    title: FastAPI Realworld
     repo: adr1enbe4udou1n/fastapi-realworld-example-app
+
+others:
+  - name: vuetify-admin
+    title: Vuetify Admin
+    repo: okami101/vuetify-admin
+    demo: https://va-demo.okami101.io/
+    docs: https://www.okami101.io/vuetify-admin
+
+  - name: laravel-rad-stack
+    title: Laravel RAD Stack
+    repo: adr1enbe4udou1n/laravel-rad-stack
+    demo: https://laravel-rad-stack.okami101.io/
