--- a/data/works.yaml
+++ b/data/works.yaml
@@ -1,36 +1,48 @@
-realworld:
-  - name: aspnet
-    title: ASP.NET Core Realworld
-    repo: adr1enbe4udou1n/aspnetcore-realworld-example-app
+- name: realworld
+  title: Conduit Apps Collection
+  description: true
+  projects:
+    - name: aspnet-core
+      title: ASP.NET Core Realworld
+      repo: adr1enbe4udou1n/aspnetcore-realworld-example-app
+      demo: https://aspnetrealworld.okami101.io/api
 
-  - name: springboot
-    title: Spring Boot Realworld
-    repo: adr1enbe4udou1n/spring-boot-realworld-example-app
+    - name: spring-boot
+      title: Spring Boot Realworld
+      repo: adr1enbe4udou1n/spring-boot-realworld-example-app
+      demo: https://springbootrealworld.okami101.io/api
 
-  - name: laravel
-    title: Laravel Realworld
-    repo: adr1enbe4udou1n/laravel-realworld-example-app
+    - name: laravel
+      title: Laravel Realworld
+      repo: adr1enbe4udou1n/laravel-realworld-example-app
+      demo: https://laravelrealworld.okami101.io/api
 
-  - name: symfony
-    title: Symfony Realworld
-    repo: adr1enbe4udou1n/symfony-realworld-example-app
+    - name: symfony
+      title: Symfony Realworld
+      repo: adr1enbe4udou1n/symfony-realworld-example-app
+      demo: https://symfonyrealworld.okami101.io/api
 
-  - name: nestjs
-    title: NestJS Realworld
-    repo: adr1enbe4udou1n/nestjs-realworld-example-app
+    - name: nestjs
+      title: NestJS Realworld
+      repo: adr1enbe4udou1n/nestjs-realworld-example-app
+      demo: https://nestjsrealworld.okami101.io/api
 
-  - name: fastapi
-    title: FastAPI Realworld
-    repo: adr1enbe4udou1n/fastapi-realworld-example-app
+    - name: fastapi
+      title: FastAPI Realworld
+      repo: adr1enbe4udou1n/fastapi-realworld-example-app
+      demo: https://fastapirealworld.okami101.io/api
 
-others:
-  - name: vuetify-admin
-    title: Vuetify Admin
-    repo: okami101/vuetify-admin
-    demo: https://va-demo.okami101.io/
-    docs: https://www.okami101.io/vuetify-admin
+- name: others
+  title: Other projects
+  description: false
+  projects:
+    - name: vuetify-admin
+      title: Vuetify Admin
+      repo: okami101/vuetify-admin
+      demo: https://va-demo.okami101.io/
+      docs: https://www.okami101.io/vuetify-admin
 
-  - name: laravel-rad-stack
-    title: Laravel RAD Stack
-    repo: adr1enbe4udou1n/laravel-rad-stack
-    demo: https://laravel-rad-stack.okami101.io/
+    - name: laravel-rad-stack
+      title: Laravel RAD Stack
+      repo: adr1enbe4udou1n/laravel-rad-stack
+      demo: https://laravel-rad-stack.okami101.io/
