--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,12 +6,16 @@
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
 colorScheme = "congo"
-# darkMode = "auto"
-# darkToggle = false
-# logo = "img/logo.jpg"
-# description = "My awesome website"
+defaultAppearance = "light"   # valid options: light or dark
+autoSwitchAppearance = true
+showAppearanceSwitcher = true
+
+enableSearch = true
+enableCodeCopy = true
+
 mainSections = ["posts"]
 # robots = ""
+showScrollToTop = true
 
 [homepage]
 layout = "profile" # valid options: page, profile, custom
@@ -19,24 +23,26 @@ showRecent = true
 
 [article]
 showDate = true
-dateFormat = "2 January 2006"
+showDateUpdated = false
 showAuthor = true
 showBreadcrumbs = false
 showDraftLabel = true
 showEdit = false
-# editURL = "https://github.com/username/repo/"
 editAppendPath = true
 showHeadingAnchors = true
 showPagination = true
+invertPagination = false
 showReadingTime = true
+showTableOfContents = true
+showTaxonomies = false
 showWordCount = false
 # sharingLinks = ["facebook", "twitter", "pinterest", "reddit", "linkedin", "email"]
-showTableOfContents = true
 
 [list]
-showBreadcrumbs = false
+showBreadcrumbs = true
 showSummary = false
-groupByYear = true
+showTableOfContents = true
+groupByYear = false
 
 [taxonomy]
 showTermCount = true
