fix fuse search

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,6 +14,9 @@ enableRobotsTXT = true
 
 summaryLength = 0
 
+[outputs]
+home = ["HTML", "RSS", "JSON"]
+
 [author]
 name = "Adrien Beaudouin"
 image = "author.jpg"
