--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -20,7 +20,7 @@ home = ["HTML", "RSS", "JSON"]
 [author]
 name = "Adrien Beaudouin"
 image = "author.jpg"
-bio = "A simple web developer @janze"
+bio = "A senior web developer @janze"
 links = [
   { email = "mailto:adrien@okami101.io" },
   { github = "https://github.com/adr1enbe4udou1n" },
