--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Adrien Beaudouin",
   "license": "MIT",
   "devDependencies": {
-    "tailwindcss": "^3.0.22"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
