--- a/data/works.yaml
+++ b/data/works.yaml
@@ -11,26 +11,31 @@
       title: Spring Boot Realworld
       repo: adr1enbe4udou1n/spring-boot-realworld-example-app
       demo: https://springbootrealworld.okami101.io/api
+      color: green
 
     - name: laravel
       title: Laravel Realworld
       repo: adr1enbe4udou1n/laravel-realworld-example-app
       demo: https://laravelrealworld.okami101.io/api
+      color: orange
 
     - name: symfony
       title: Symfony Realworld
       repo: adr1enbe4udou1n/symfony-realworld-example-app
       demo: https://symfonyrealworld.okami101.io/api
+      color: black
 
     - name: nestjs
       title: NestJS Realworld
       repo: adr1enbe4udou1n/nestjs-realworld-example-app
       demo: https://nestjsrealworld.okami101.io/api
+      color: red
 
     - name: fastapi
       title: FastAPI Realworld
       repo: adr1enbe4udou1n/fastapi-realworld-example-app
       demo: https://fastapirealworld.okami101.io/api
+      color: teal
 
 - name: others
   title: Other projects
