--- a/data/works.yaml
+++ b/data/works.yaml
@@ -2,54 +2,65 @@
   title: Conduit Apps Collection
   description: true
   projects:
-    - name: aspnet-core
-      title: ASP.NET Core Realworld
-      repo: adr1enbe4udou1n/aspnetcore-realworld-example-app
-      demo: https://aspnetrealworld.okami101.io/api
+    - title: Frontend
+      apps:
+        - name: vue-ts
+          title: Vue 3 TS Realworld
+          repo: adr1enbe4udou1n/vue-ts-realworld-example-app
+          demo: https://vuetsrealworld.okami101.io
+          color: green
 
-    - name: spring-boot
-      title: Spring Boot Realworld
-      repo: adr1enbe4udou1n/spring-boot-realworld-example-app
-      demo: https://springbootrealworld.okami101.io/api
-      color: green
+    - title: Backend
+      apps:
+        - name: aspnet-core
+          title: ASP.NET Core Realworld
+          repo: adr1enbe4udou1n/aspnetcore-realworld-example-app
+          demo: https://aspnetrealworld.okami101.io/api
 
-    - name: symfony
-      title: Symfony Realworld
-      repo: adr1enbe4udou1n/symfony-realworld-example-app
-      demo: https://symfonyrealworld.okami101.io/api
-      color: black
+        - name: spring-boot
+          title: Spring Boot Realworld
+          repo: adr1enbe4udou1n/spring-boot-realworld-example-app
+          demo: https://springbootrealworld.okami101.io/api
+          color: green
 
-    - name: laravel
-      title: Laravel Realworld
-      repo: adr1enbe4udou1n/laravel-realworld-example-app
-      demo: https://laravelrealworld.okami101.io/api
-      color: orange
+        - name: symfony
+          title: Symfony Realworld
+          repo: adr1enbe4udou1n/symfony-realworld-example-app
+          demo: https://symfonyrealworld.okami101.io/api
+          color: black
 
-    - name: nestjs
-      title: NestJS Realworld
-      repo: adr1enbe4udou1n/nestjs-realworld-example-app
-      demo: https://nestjsrealworld.okami101.io/api
-      color: red
+        - name: laravel
+          title: Laravel Realworld
+          repo: adr1enbe4udou1n/laravel-realworld-example-app
+          demo: https://laravelrealworld.okami101.io/api
+          color: orange
 
-    - name: fastapi
-      title: FastAPI Realworld
-      repo: adr1enbe4udou1n/fastapi-realworld-example-app
-      demo: https://fastapirealworld.okami101.io/api
-      color: teal
+        - name: nestjs
+          title: NestJS Realworld
+          repo: adr1enbe4udou1n/nestjs-realworld-example-app
+          demo: https://nestjsrealworld.okami101.io/api
+          color: red
+
+        - name: fastapi
+          title: FastAPI Realworld
+          repo: adr1enbe4udou1n/fastapi-realworld-example-app
+          demo: https://fastapirealworld.okami101.io/api
+          color: teal
 
 - name: others
   title: Other projects
   description: false
   projects:
-    - name: vuetify-admin
-      title: Vuetify Admin
-      date: 11/2020
-      repo: okami101/vuetify-admin
-      demo: https://va-demo.okami101.io/
-      docs: https://www.okami101.io/vuetify-admin
+    - apps:
+      - name: vuetify-admin
+        title: Vuetify Admin
+        date: 11/2020
+        repo: okami101/vuetify-admin
+        demo: https://va-demo.okami101.io/
+        docs: https://www.okami101.io/vuetify-admin
 
-    - name: laravel-rad-stack
-      title: Laravel RAD Stack
-      date: 10/2021
-      repo: adr1enbe4udou1n/laravel-rad-stack
-      demo: https://laravel-rad-stack.okami101.io/
+      - name: laravel-rad-stack
+        title: Laravel RAD Stack
+        date: 10/2021
+        repo: adr1enbe4udou1n/laravel-rad-stack
+        demo: https://laravel-rad-stack.okami101.io/
