--- a/data/works.yaml
+++ b/data/works.yaml
@@ -15,7 +15,7 @@
         - name: aspnet-core
           title: ASP.NET Core Realworld
           repo: adr1enbe4udou1n/aspnetcore-realworld-example-app
-          demo: https://aspnetrealworld.okami101.io/api
+          demo: https://aspnetcorerealworld.okami101.io/api
 
         - name: spring-boot
           title: Spring Boot Realworld
@@ -52,15 +52,15 @@
   description: false
   projects:
     - apps:
-      - name: vuetify-admin
-        title: Vuetify Admin
-        date: 11/2020
-        repo: okami101/vuetify-admin
-        demo: https://va-demo.okami101.io/
-        docs: https://www.okami101.io/vuetify-admin
+        - name: vuetify-admin
+          title: Vuetify Admin
+          date: 11/2020
+          repo: okami101/vuetify-admin
+          demo: https://va-demo.okami101.io/
+          docs: https://www.okami101.io/vuetify-admin
 
-      - name: laravel-rad-stack
-        title: Laravel RAD Stack
-        date: 10/2021
-        repo: adr1enbe4udou1n/laravel-rad-stack
-        demo: https://laravel-rad-stack.okami101.io/
+        - name: laravel-rad-stack
+          title: Laravel RAD Stack
+          date: 10/2021
+          repo: adr1enbe4udou1n/laravel-rad-stack
+          demo: https://laravel-rad-stack.okami101.io/
