--- a/data/works.yaml
+++ b/data/works.yaml
@@ -7,6 +7,7 @@
         - name: vue-ts
           title: Vue 3 TS Realworld
           repo: adr1enbe4udou1n/vue-ts-realworld-example-app
+          ci: conduit-vue-ts
           demo: https://vuetsrealworld.okami101.io
           color: green
 
@@ -15,35 +16,41 @@
         - name: aspnet-core
           title: ASP.NET Core Realworld
           repo: adr1enbe4udou1n/aspnetcore-realworld-example-app
+          ci: conduit-aspnet-core
           demo: https://aspnetcorerealworld.okami101.io/api
 
         - name: spring-boot
           title: Spring Boot Realworld
           repo: adr1enbe4udou1n/spring-boot-realworld-example-app
+          ci: conduit-spring-boot
           demo: https://springbootrealworld.okami101.io/api
           color: green
 
         - name: symfony
           title: Symfony Realworld
           repo: adr1enbe4udou1n/symfony-realworld-example-app
+          ci: conduit-symfony
           demo: https://symfonyrealworld.okami101.io/api
           color: black
 
         - name: laravel
           title: Laravel Realworld
           repo: adr1enbe4udou1n/laravel-realworld-example-app
+          ci: conduit-laravel
           demo: https://laravelrealworld.okami101.io/api
           color: orange
 
         - name: nestjs
           title: NestJS Realworld
           repo: adr1enbe4udou1n/nestjs-realworld-example-app
+          ci: conduit-nestjs
           demo: https://nestjsrealworld.okami101.io/api
           color: red
 
         - name: fastapi
           title: FastAPI Realworld
           repo: adr1enbe4udou1n/fastapi-realworld-example-app
+          ci: conduit-fastapi
           demo: https://fastapirealworld.okami101.io/api
           color: teal
 
