--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,16 +6,16 @@
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
 colorScheme = "congo"
-defaultAppearance = "light"   # valid options: light or dark
+defaultAppearance = "light"          # valid options: light or dark
 autoSwitchAppearance = true
-showAppearanceSwitcher = true
+footer.showAppearanceSwitcher = true
 
 enableSearch = true
 enableCodeCopy = true
 
 mainSections = ["posts"]
 # robots = ""
-showScrollToTop = true
+footer.showScrollToTop = true
 
 [homepage]
 layout = "profile" # valid options: page, profile, custom
@@ -36,7 +36,8 @@ showReadingTime = true
 showTableOfContents = true
 showTaxonomies = false
 showWordCount = false
-# sharingLinks = ["facebook", "twitter", "pinterest", "reddit", "linkedin", "email"]
+showComments = true
+sharingLinks = ["twitter", "reddit", "linkedin"]
 
 [list]
 showBreadcrumbs = true
