--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -16,9 +16,14 @@ pageRef = "posts"
 weight = 10
 
 [[main]]
+name = "About"
+pageRef = "about"
+weight = 20
+
+[[main]]
 name = "Works"
 pageRef = "works"
-weight = 20
+weight = 30
 
 # [[main]]
 #   name = "Categories"
