--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,7 +5,7 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
-colorScheme = "congo"
+colorScheme = "okami"
 defaultAppearance = "light"          # valid options: light or dark
 autoSwitchAppearance = true
 footer.showAppearanceSwitcher = true
