--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -40,7 +40,12 @@ weight = 30
 # The footer menu is displayed at the bottom of the page, just before
 # the copyright notice. Configure as per the main menu above.
 
-# [[footer]]
-#   name = "Tags"
-#   pageRef = "tags"
-#   weight = 10
+[[footer]]
+name = "Tags"
+pageRef = "tags"
+weight = 10
+
+[[footer]]
+name = "Privacy Policy"
+pageRef = "privacy-policy"
+weight = 20
