--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,6 +9,7 @@ colorScheme = "okami"
 defaultAppearance = "light"          # valid options: light or dark
 autoSwitchAppearance = true
 footer.showAppearanceSwitcher = true
+footer.showThemeAttribution = false
 
 enableSearch = true
 enableCodeCopy = true
