--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/getting-started/
 
-# baseURL = "https://blog.okami101.io/"
+baseURL = "https://blog.okami101.io"
 languageCode = "en"
 defaultContentLanguage = "en"
 theme = "congo"
