--- a/data/works.yaml
+++ b/data/works.yaml
@@ -1,8 +1,8 @@
 - name: realworld
   title: Conduit Apps Collection
-  description: true
   projects:
     - title: Frontend
+      description: frontend
       apps:
         - name: vue-ts
           title: Vue 3 TS Realworld
@@ -18,6 +18,7 @@
           color: blue
 
     - title: Backend
+      description: backend
       apps:
         - name: aspnet-core
           title: ASP.NET Core Realworld
