--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,9 +6,10 @@ baseURL = "https://blog.okami101.io"
 languageCode = "en"
 defaultContentLanguage = "en"
 theme = "congo"
-
 title = "Okami101 Blog"
 # copyright = "Copy, _right?_ :thinking_face:"
+
+timeout = 120000
 
 enableEmoji = true
 enableRobotsTXT = true
