--- a/.woodpecker.yaml
+++ b/.woodpecker.yaml
@@ -4,7 +4,7 @@ steps:
     commands:
       - hugo --minify
     when:
-      branch: main
+      event: push
     backend_options:
       kubernetes:
         tolerations:
@@ -16,7 +16,7 @@ steps:
   - name: publish
     image: woodpeckerci/plugin-docker-buildx
     when:
-      branch: main
+      event: push
     settings:
       repo: gitea.okami101.io/adr1enbe4udou1n/blog
       registry: https://gitea.okami101.io
