--- a/.woodpecker.yaml
+++ b/.woodpecker.yaml
@@ -1,4 +1,14 @@
 steps:
+  - name: restore-cache
+    image: meltwater/drone-cache
+    volumes:
+      - woodpecker-cache:/woodpecker/src/resources
+    when:
+      event: push
+    settings:
+      mount:
+        - woodpecker-cache
+
   - name: build
     image: hugomods/hugo:latest
     commands:
@@ -14,6 +24,16 @@ steps:
             operator: Exists
         nodeSelector:
           node-role.kubernetes.io/runner: "true"
+
+  - name: rebuild-cache
+    image: meltwater/drone-cache
+    volumes:
+      - woodpecker-cache:/woodpecker/src/resources
+    when:
+      event: push
+    settings:
+      mount:
+        - woodpecker-cache
 
   - name: publish
     image: woodpeckerci/plugin-docker-buildx
