--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: |
-          ls ${{ gitea.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+        with:
+          submodules: true
+      - uses: peaceiris/actions-hugo@v3
+      - name: Build
+        run: hugo --minify
