--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -8,5 +8,7 @@ jobs:
         with:
           submodules: true
       - uses: peaceiris/actions-hugo@v3
+        with:
+          extended: true
       - name: Build
         run: hugo --minify
