--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -10,5 +10,9 @@ jobs:
       - uses: peaceiris/actions-hugo@v3
         with:
           extended: true
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: resources
       - name: Build test
         run: hugo --minify
