--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      HUGO_CACHEDIR: /tmp/hugo_cache
     steps:
       - uses: actions/checkout@v4
         with:
@@ -10,9 +12,12 @@ jobs:
       - uses: peaceiris/actions-hugo@v3
         with:
           extended: true
-      - name: Cache Gradle packages
+      - name: Cache Resources
         uses: actions/cache@v4
         with:
-          path: resources
+          path: ${{ env.HUGO_CACHEDIR }}
+          key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-hugomod-
       - name: Build test
         run: hugo --minify
