--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -12,8 +12,7 @@ jobs:
       - uses: peaceiris/actions-hugo@v3
         with:
           extended: true
-      - name: Cache Resources
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: ${{ env.HUGO_CACHEDIR }}
           key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.sum') }}
