--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -23,6 +23,7 @@ jobs:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
       - uses: docker/setup-buildx-action@v3
         with:
+          driver: docker
           endpoint: tcp://localhost:2376
       - uses: docker/build-push-action@v6
         with:
