--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -21,11 +21,7 @@ jobs:
           registry: ${{ vars.CONTAINER_REGISTRY_URL }}
           username: ${{ vars.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
-      - uses: docker/setup-buildx-action@v3
-        with:
-          endpoint: unix:///var/run/user/1000/docker.sock
-      - uses: docker/build-push-action@v6
-        with:
-          push: true
-          endpoint: tcp://localhost:2376
-          tags: ${{ vars.CONTAINER_REGISTRY_URL }}/adr1enbe4udou1n/blog:latest
+      - name: Build and push
+        run: |
+          docker build -t ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest .
+          docker push ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest
