--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: ghcr.io/catthehacker/ubuntu:act-latest
     steps:
       - uses: actions/checkout@v4
         with:
@@ -21,7 +22,8 @@ jobs:
           registry: ${{ vars.CONTAINER_REGISTRY_URL }}
           username: ${{ vars.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
-      - name: Build and push
-        run: |
-          docker build -t ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest .
-          docker push ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest
