--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -23,6 +23,8 @@ jobs:
           username: ${{ vars.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
       - uses: docker/setup-buildx-action@v3
+        with:
+          endpoint: tcp://localhost:2376
       - uses: docker/build-push-action@v6
         with:
           push: true
