--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
       - uses: docker/setup-buildx-action@v3
         with:
-          endpoint: tcp://localhost:2376
+          endpoint: unix://var/run/user/1000/docker.sock
       - uses: docker/build-push-action@v6
         with:
           push: true
