--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           path: resources
           key: ${{ runner.os }}-resources
-      - name: Build
+      - name: Build test
         run: hugo --minify
       - uses: docker/login-action@v3
         with:
