--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -16,6 +16,7 @@ jobs:
           key: ${{ runner.os }}-resources
       - name: Build
         run: hugo --minify
+      - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
           registry: ${{ vars.CONTAINER_REGISTRY_URL }}
@@ -24,7 +25,7 @@ jobs:
       - name: List files in the repository
         run: |
           ls public
-      # - uses: docker/build-push-action@v6
-      #   with:
-      #     push: true
-      #     tags: ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest
+      - uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest
