--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -22,10 +22,7 @@ jobs:
           registry: ${{ vars.CONTAINER_REGISTRY_URL }}
           username: ${{ vars.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
-      - name: List files in the repository
+      - name: Build and push
         run: |
-          ls public
-      - uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest
+          docker build -t ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest .
+          docker push ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}:latest
