--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -1,5 +1,7 @@
 on:
   push:
+    branches:
+      - main
     tags:
       - "v*"
 
@@ -19,6 +21,10 @@ jobs:
           key: ${{ runner.os }}-resources
       - name: Build test
         run: hugo --minify
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - uses: docker/metadata-action@v5
         id: meta
         with:
