try gitea action

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -19,30 +19,21 @@ jobs:
         with:
           path: resources
           key: ${{ runner.os }}-resources
-      - name: Build test
+      - name: Build
         run: hugo --minify
-      - uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: public
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          name: dist
       - uses: docker/metadata-action@v5
+        if: gitea.event_name == 'tag'
         id: meta
         with:
           images: ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}
       - uses: docker/login-action@v3
+        if: gitea.event_name == 'tag'
         with:
           registry: ${{ vars.CONTAINER_REGISTRY_URL }}
           username: ${{ vars.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
       - uses: docker/build-push-action@v6
+        if: gitea.event_name == 'tag'
         with:
           context: .
           push: true
