--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    #if: gitea.event_name == 'tag'
+    if: gitea.event_name == 'tag'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
