--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
         id: restore-build
         with:
           path: public
-          key: ${{ runner.os }}-public
+          key: ${{ gitea.sha }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -36,7 +36,7 @@ jobs:
         id: restore-build
         with:
           path: public
-          key: ${{ runner.os }}-public
+          key: ${{ gitea.sha }}
       - uses: docker/metadata-action@v5
         id: meta
         with:
