--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -9,7 +9,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ gitea.event_name }} event."
       - uses: actions/checkout@v4
         with:
           submodules: true
@@ -30,7 +29,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: gitea.event_name == 'tag'
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
