--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -21,34 +21,5 @@ jobs:
           key: ${{ runner.os }}-resources
       - name: Build
         run: hugo --minify
-      - uses: actions/cache@v4
-        id: restore-build
-        with:
-          path: public
-          key: ${{ gitea.sha }}
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/cache@v4
-        id: restore-build
-        with:
-          path: public
-          key: ${{ gitea.sha }}
-      - uses: docker/metadata-action@v5
-        id: meta
-        with:
-          images: ${{ vars.CONTAINER_REGISTRY_URL }}/${{ gitea.repository }}
-      - uses: docker/login-action@v3
-        with:
-          registry: ${{ vars.CONTAINER_REGISTRY_URL }}
-          username: ${{ vars.CONTAINER_REGISTRY_USERNAME }}
-          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
-      - uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - uses: okami101/docker-action/.gitea/workflows/push-image@main
+        #if: startsWith(github.ref, 'refs/tags/v')
