--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -21,5 +21,5 @@ jobs:
           key: ${{ runner.os }}-resources
       - name: Build test
         run: hugo --minify
-      - uses: okami101/docker-action/.gitea/workflows/push-image@main
+      - uses: gitea.okami101.io/okami101/docker-action/.gitea/workflows/push-image@main
         #if: startsWith(github.ref, 'refs/tags/v')
