--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -21,5 +21,8 @@ jobs:
           key: ${{ runner.os }}-resources
       - name: Build
         run: hugo --minify
-      - uses: https://gitea.okami101.io/okami101/docker-action/.gitea/workflows/push-image@d2f8e211e13fbccfa7cc15efeeb4175bd7015027
+      - uses: https://gitea.okami101.io/okami101/docker-action@main
         #if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          username: ${{ vars.CONTAINER_REGISTRY_USERNAME }}
+          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
