--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           path: resources
           key: ${{ runner.os }}-resources
-      - name: Build
+      - name: Build test
         run: hugo --minify
       - uses: https://gitea.okami101.io/okami101/docker-action@main
         #if: startsWith(github.ref, 'refs/tags/v')
