--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -23,6 +23,5 @@ jobs:
         run: hugo --minify
       - uses: https://gitea.okami101.io/okami101/docker-action@main
         # if: startsWith(github.ref, 'refs/tags/v')
-        # with:
-        #   username: ${{ vars.CONTAINER_REGISTRY_USERNAME }}
-        #   password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
+        with:
+          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
