--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -22,6 +22,6 @@ jobs:
       - name: Build
         run: hugo --minify
       - uses: https://gitea.okami101.io/okami101/docker-action@main
-        # if: startsWith(github.ref, 'refs/tags/v')
+        if: startsWith(github.ref, 'refs/tags/v')
         with:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
