--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -1,5 +1,7 @@
 on:
   push:
+    branches:
+      - main
     tags:
       - "v*"
 
@@ -20,6 +22,5 @@ jobs:
       - name: Build
         run: hugo --minify
       - uses: https://gitea.okami101.io/okami101/actions/docker@main
-        if: startsWith(github.ref, 'refs/tags/v')
         with:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
