--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ !startsWith(gitea.ref, 'refs/tags/v') }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -21,6 +22,14 @@ jobs:
           extended: true
       - name: Build
         run: hugo --minify
+      - uses: https://gitea.okami101.io/okami101/actions/docker@main
+        with:
+          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    if: ${{ startsWith(gitea.ref, 'refs/tags/v') }}
+    steps:
       - uses: https://gitea.okami101.io/okami101/actions/docker@main
         with:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
