--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -27,9 +27,6 @@ jobs:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
   deploy:
-    runs-on: ubuntu-latest
-    if: ${{ startsWith(gitea.ref, 'refs/tags/v') }}
-    steps:
-      - uses: https://gitea.okami101.io/okami101/actions/docker@main
-        with:
-          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
+    uses: https://gitea.okami101.io/okami101/actions/deploy.yaml@main
+    with:
+      password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
