--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -27,6 +27,6 @@ jobs:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
   deploy:
-    uses: https://gitea.okami101.io/okami101/actions/deploy.yaml@main
+    uses: https://gitea.okami101.io/okami101/actions/.gitea/workflows/release.yaml@main
     with:
       password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
