--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -28,5 +28,5 @@ jobs:
 
   deploy:
     uses: https://gitea.okami101.io/okami101/actions/.gitea/workflows/release.yaml@main
-    with:
+    secrets:
       password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
