--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
           extended: true
       - name: Build
         run: hugo --minify
-      - uses: https://gitea.okami101.io/okami101/actions/docker@main
+      - uses: gitea.okami101.io/okami101/actions/docker@main
         with:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
