--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -17,9 +17,10 @@ jobs:
       - uses: peaceiris/actions-hugo@v3
         with:
           extended: true
-      - name: Build test
+      - name: Build
         run: hugo --minify
       - uses: https://gitea.okami101.io/okami101/actions/docker@main
         with:
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
           gitea-token: ${{ secrets.RELEASE_TOKEN }}
+          release: true
