--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -61,3 +61,14 @@ excludedKinds = ["taxonomy", "term"]
 # bing = ""
 # pinterest = ""
 # yandex = ""
+
+[author]
+name = "Adrien Beaudouin"
+image = "author.jpg"
+bio = "A senior web developer @janze"
+links = [
+    { email = "mailto:adrien@okami101.io" },
+    { github = "https://github.com/adr1enbe4udou1n" },
+    { linkedin = "https://linkedin.com/in/adr1enbe4udou1n" },
+    { twitter = "https://twitter.com/adr1enbe4udou1n" },
+]
